add unit test, test has been success

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "An i18n like translator for json templates",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json"
   },
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SeyyedKhandon/i18n-translator-for-json-templates.git"
@@ -21,9 +23,12 @@
   },
   "homepage": "https://github.com/SeyyedKhandon/i18n-translator-for-json-templates#readme",
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.4",
+    "jest": "^25.5.4",
     "prettier": "^2.0.5",
+    "ts-jest": "^25.4.0",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
