--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "ts-jest": "^25.4.0",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@types/ramda": "^0.27.4"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "ramda": "^0.27.0"
   }
 }
